2021-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {pprescan,scanpage}.c:
	Fix bug in fallback multibyte character in virtual font for (u)pTeX.
	Thanks 流橋 利樹-san for the report.
	https://oku.edu.mie-u.ac.jp/tex/mod/forum/discuss.php?d=3068

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-02-17  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2021.1 and copyright 2021.

2021-02-09  Karl Berry  <karl@freefriends.org>

	* test-afm2tfm.test: rewrite as shell script.
	* afm2tfm-test.pl: remove.
	* Makefile.am (TESTS, etc.): adapt accordingly.

2021-02-08  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_INIT): TeX Live not TeXLive.

	* dvips.c (found_problems): define.
	(main): final exit status depends on its value.
	* protos.h (found_problems): declare.
	* output.c (copyfile_general): set found_problems=1 if image not found.
	This is to match the new behavior of dvipdfmx.
	https://tug.org/pipermail/dvipdfmx/2021-January/000159.html (thread)
	
	* test-missing-image.test: corresponding test.
	* testdata/missing-image.dvi,
	* testdata/missing-image.tex: files for new test.

2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* NEWS: Mention new/jfm feature.
	* dospecial.c:
	Output error of html special not to STDOUT but to STDERR.
	* dvips.h, {bitmapenc,color,dopage,dospecial,download,dvips,
	emspecial,finclude,fontdef,header,loadfont,output,pprescan,prescan,
	resident,scanpage,search,t1part,virtualfont,writet1}.c:
	Allow Unicode error messages on Windows console. (Windows only)

2020-11-28  Akira Kakuto  <kakuto@w32tex.org>

	* protos.h (titlename): new global.
	* dvips.c (titlename): new global.
	(helparr): new option -title.
	(main): recognize it.
	* output.c (initprinter) <%%Title>: use xbasename(iname) instead of
	iname by default.

2020-11-28  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Option details): document -title.
